# flex-cuda-miner

./: CMakeLists.txt  COMPLETION_CELEBRATION.md  GHOSTRIDER_IMPLEMENTATION.md  GHOSTRIDER_SETUP_GUIDE.md  NEXT_ITERATION_PLAN.md  Notes.txt  POOL_TROUBLESHOOTING.md  PRODUCTION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SOLO_MINING_COMPLETION.md  SOLO_MINING_IMPLEMENTATION.md  SOLO_MINING_SETUP.md  SOLO_MINING_STATUS_FINAL.md  STATUS_REPORT.md  build.bat  build.sh  config.ini  deploy.bat  deploy.sh  monitor.sh  run.bat  run.sh
src/: config.cpp  config.h  flex_cpu.cpp  flex_cpu.h  main.cpp  main_test.cpp  main_working.cpp  mining_pool.cpp  mining_pool.h  performance_test.cpp  performance_test.h  rpc_client.cpp  rpc_client.h  simple_json.cpp  simple_json.h  simple_json_broken.h.bak  test.cpp  test_suite.cpp
src/cuda/: cuda_blake512.cu  cuda_blake512.h  cuda_bmw512.h  cuda_bmw512_impl.cu  cuda_cubehash512.h  cuda_cubehash512_impl.cu  cuda_echo512.h  cuda_echo512_impl.cu  cuda_fugue512.h  cuda_fugue512_impl.cu  cuda_ghostrider.cu  cuda_ghostrider.h  cuda_groestl512.h  cuda_groestl512_impl.cu  cuda_hamsi512.h  cuda_hamsi512_impl.cu  cuda_hash_headers.h  cuda_hash_stubs.cu  cuda_jh512.cu  cuda_keccak512.cu  cuda_keccak512.h  cuda_luffa512.h  cuda_luffa512_impl.cu  cuda_sha512.cu  cuda_shabal512.h  cuda_shabal512_impl.cu  cuda_shavite512.h  cuda_shavite512_impl.cu  cuda_simd512.h  cuda_simd512_impl.cu  cuda_skein512.h  cuda_skein512_impl.cu  cuda_whirlpool512.h  cuda_whirlpool512_impl.cu  flex_cuda.cu
